<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:background="@color/colorPrimaryLight"
        tools:context=".RoleSelectionActivity">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_app_logo"
            android:layout_marginBottom="32dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_role"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginBottom="48dp"/>


        <Button
            android:id="@+id/btnPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_patient"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:padding="16dp"/>


        <Button
            android:id="@+id/btnCounsellor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_counsellor"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:padding="16dp"/>


</LinearLayout>

